backend/temp_error.txt
file:///E:/FLUX/edu-aid-craft/backend/server.js:12
import dotenv from 'dotenv';
^^^^^^^^^^^^^

SyntaxError: Identifier 'dotenv' has already been declared
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:106:18)
    at #translate (node:internal/modules/esm/loader:442:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:489:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)

Node.js v23.5.0
